Code refactoring, NodeMenu class added

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
         <title>Playground</title>
         <script src="js/index.js" type="module"></script>
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="css/tree.css" />
+        <link rel="stylesheet" href="css/nodeMenu.css" />
     </head>
     <body>
-        <div id="tree"></div>
+        <div id="app">
+            <div id="tree"></div>
+        </div>
     </body>
 </html>
