Add delete node action

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Playground</title>
         <script src="js/index.js" type="module"></script>
-        <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="css/global.css" />
         <link rel="stylesheet" href="css/tree.css" />
         <link rel="stylesheet" href="css/nodeMenu.css" />
     </head>
