--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,8 @@
     <head>
         <title>Playground</title>
         <script src="js/index.js" type="module"></script>
-        <link rel="stylesheet" href="css/global.css" />
-        <link rel="stylesheet" href="css/tree.css" />
-        <link rel="stylesheet" href="css/nodeMenu.css" />
     </head>
     <body>
-        <div id="app">
-            <div id="tree"></div>
-        </div>
+        <div id="app"></div>
     </body>
 </html>
